tests/paczka1/small_fuzzy/64858219.err
Error in line 1: eGvxamf8 A197 42,9
Error in line 3: S212 S934 99,7
Error in line 5: S212 A140 98,9
Error in line 10: QgWFgVxyoSF A140 89,5
